--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<div class="container">
 			<div class="card-white" id="introduction">
-				<H1>Hello, i'm Lorenzo</H1>
+				<H1>Hello, i'm Lorenzoo</H1>
 				<img src="./images/profile.png" class="img-circle" width="100px" alt="Lorenzo BARTOLONE">
 				<p>
 				  I love Github, UX/UI Design, web-development and Dogs. I use Le Wagon to learn how to code with entrepreneurs and creative people around the world.</p>
